shadowsocks: resolve server address before send udp packet